--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pm2": "^0.15.10",
     "rc": "~0.5.0",
     "sails": "~0.11.0",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "sails-mongo": "^0.11.5"
   },
   "scripts": {
     "start": "node app.js",
